testsuite/tests/typing-layouts-products/unboxed_tuples_disabled.compilers.reference
File "unboxed_tuples.ml", line 56, characters 22-28:
56 | let print_ints prefix #(x,y) = Printf.printf "%s: #(%d,%d)\n" prefix x y
                           ^^^^^^
Error: This construct requires the stable version of the extension "layouts", which is disabled and cannot be used
